[gd_scene load_steps=5 format=3 uid="uid://bpn1svujyw0lt"]

[ext_resource type="Script" path="res://scripts/leaderboard_menu.gd" id="1_d1v7p"]
[ext_resource type="PackedScene" uid="uid://w7uifxrgs7i3" path="res://scenes/background.tscn" id="1_jq61d"]
[ext_resource type="FontFile" uid="uid://bv1rnx3susduu" path="res://assets/fonts/Kenney Pixel Square.ttf" id="3_17l62"]
[ext_resource type="Texture2D" uid="uid://bgicxsbvk36mu" path="res://assets/textures/bg/Gray.png" id="3_cb12u"]

[node name="LeaderboardMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1v7p")

[node name="Background" parent="." instance=ExtResource("1_jq61d")]
backround_texture = ExtResource("3_cb12u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="LeaderboardLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_17l62")
theme_override_font_sizes/font_size = 32
text = "Leaderboard"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 36

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_17l62")
text = "1"

[node name="PlayerName1" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_17l62")
text = "Player Name"

[node name="PlayerTime1" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_17l62")
text = "100.0"

[node name="Control" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control"]
offset_left = -10.0
offset_right = -2.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "1"

[node name="PlayerName1" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
offset_left = 14.0
offset_right = 140.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "Player Name"

[node name="PlayerTime1" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
offset_left = 178.0
offset_right = 265.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "10.000"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control2"]
offset_left = -10.0
offset_right = 2.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "2"

[node name="PlayerName2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control2"]
unique_name_in_owner = true
offset_left = 14.0
offset_right = 140.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "Player Name"

[node name="PlayerTime2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control2"]
unique_name_in_owner = true
offset_left = 177.0
offset_right = 265.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "100.000"
horizontal_alignment = 2

[node name="Control3" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control3"]
offset_left = -10.0
offset_right = 2.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "3"

[node name="PlayerName3" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control3"]
unique_name_in_owner = true
offset_left = 14.0
offset_right = 140.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "Player Name"

[node name="PlayerTime3" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control3"]
unique_name_in_owner = true
offset_left = 176.0
offset_right = 265.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "100.000"
horizontal_alignment = 2

[node name="Control4" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control4"]
offset_left = -10.0
offset_right = 2.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "4"

[node name="PlayerName4" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control4"]
unique_name_in_owner = true
offset_left = 14.0
offset_right = 140.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "Player Name"

[node name="PlayerTime4" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control4"]
unique_name_in_owner = true
offset_left = 177.0
offset_right = 265.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "100.000"
horizontal_alignment = 2

[node name="Control5" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control5"]
offset_left = -10.0
offset_right = 2.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "5"

[node name="PlayerName5" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control5"]
unique_name_in_owner = true
offset_left = 14.0
offset_right = 140.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "LUCALEMONLORD"

[node name="PlayerTime5" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/Control5"]
unique_name_in_owner = true
offset_left = 177.0
offset_right = 265.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_17l62")
text = "1000.000"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_17l62")
text = "Back"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/BackButton" to="." method="on_back_button_pressed"]
